Reorganize project structure and update documentation
- Reorganized files by moving documentation to docs/ folder
- Renamed news.py to VnExpress.py for better clarity
- Moved weather.py and music.py to docs/ folder
- Updated README.md with new structure
- Created Vietnamese documentation (readme_vn.md)
- Updated mcp_config.json to reflect new structure
- Removed outdated readme_news.md

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,19 +1,14 @@
 {
-    "mcpServers": {
-        "calculator": {
-            "command": "python",
-            "args": ["calculator.py"],
-            "type": "stdio"
-        },
-        "news": {
-            "command": "python",
-            "args": ["news.py"],
-            "type": "stdio"
-        },
-        "music": {
-            "command": "python",
-            "args": ["music.py"],
-            "type": "stdio"
-        }
+  "mcpServers": {
+    "calculator": {
+      "command": "python",
+      "args": ["calculator.py"],
+      "type": "stdio"
+    },
+    "VnExpress": {
+      "command": "python",
+      "args": ["VnExpress.py"],
+      "type": "stdio"
     }
+  }
 }
