--- a/mcp_config.json
+++ b/mcp_config.json
@@ -9,6 +9,21 @@
       "command": "python",
       "args": ["VnExpress.py"],
       "type": "stdio"
+    },
+    "dantri_news": {
+      "command": "python",
+      "args": ["dantri_news.py"],
+      "type": "stdio"
+    },
+    "radio": {
+      "command": "python",
+      "args": ["dantri_news.py"],
+      "type": "stdio"
+    },
+    "news": {
+      "command": "python",
+      "args": ["news.py"],
+      "type": "stdio"
     }
   }
 }
