--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,9 @@
-# Python
+# Python cache and compiled files
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
+*.pyc
 .Python
 build/
 develop-eggs/
@@ -16,44 +17,106 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Virtual environments
 venv/
 ENV/
 env/
 .venv
+env.bak/
+venv.bak/
 
-# IDE
+# IDE and editors
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
 
 # Git
 .git/
 .gitignore
+.gitattributes
+.github/
 
-# Docker
-Dockerfile
-docker-compose.yml
+# Docker files (don't copy into image)
+Dockerfile*
+docker-compose*.yml
 .dockerignore
 
-# Documentation
+# Documentation (not needed in runtime)
 *.md
+README*
+LICENSE
+CHANGELOG*
 docs/readme*.md
+docs/*.md
 
-# OS
+# OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+desktop.ini
 
-# Logs
+# Logs and databases
 *.log
+*.sql
+*.sqlite
+*.db
 
 # Test files
 tests/
 test_*.py
 *_test.py
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# CI/CD
+.travis.yml
+.gitlab-ci.yml
+.circleci/
+azure-pipelines.yml
+
+# Environment files (use docker-compose env instead)
+.env
+.env.*
+!.env.example
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Setup scripts (not needed in container)
+setup.sh
+setup.ps1
+Makefile
+
+# Sample/example files
+*.sample
+*example*
+!.env.example
