--- a/mcp_config.json
+++ b/mcp_config.json
@@ -19,16 +19,19 @@
       "command": "python",
       "args": ["radio.py"],
       "type": "stdio"
+      "disabled": true
     },
     "invidious": {
       "command": "python",
       "args": ["invidious_mcp.py"],
       "type": "stdio"
+      "disabled": true
     },
     "news": {
       "command": "python",
       "args": ["news.py"],
       "type": "stdio"
+      "disabled": true
     }
   }
 }
