--- a/mcp_config.json
+++ b/mcp_config.json
@@ -19,18 +19,21 @@
       "command": "python",
       "args": ["radio.py"],
       "type": "stdio"
+      "disabled": "true"
 
     },
     "invidious": {
       "command": "python",
       "args": ["invidious_mcp.py"],
       "type": "stdio"
+      "disabled": "true"
 
     },
     "news": {
       "command": "python",
       "args": ["news.py"],
       "type": "stdio"
+      "disabled": "true"
 
     }
   }
