--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - PYTHONUNBUFFERED=1
       # Nhập token trực tiếp ở đây
       - MCP_ENDPOINT=your_token_here
+      # OpenWeather API Key
+      - OPENWEATHER_API_KEY=your_openweather_api_key_here
       # Optional: Uncomment nếu sử dụng mp3-proxy
       # - MP3_PROXY_URL=http://mp3-proxy:5005
       # Optional: Uncomment nếu sử dụng invidious-proxy
