--- a/mcp_config.json
+++ b/mcp_config.json
@@ -27,11 +27,10 @@
       "type": "stdio",
       "disabled": "true"
     },
-    "news": {
+    "Weather": {
       "command": "python",
-      "args": ["news.py"],
-      "type": "stdio",
-      "disabled": "true"
+      "args": ["Weather.py"],
+      "type": "stdio"
     }
   }
 }
